# Kairos

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  conftest.py  pyproject.toml
docs/: rfc_allocation_sheet_v1.md  todo.md
docs/playbooks/: README.md  daily-signals.md  hourly-signals.md  model-finetuning.md  signal-handling.md  weekly-strategy-discovery.md
docs/tickets/: APPENDIX-A-standards.md  E1-S01-walk-forward-harness.md  E1-S02-allocator-base-and-shrinkage.md  E1-S03-atr-bracket-wrapper.md  (+59 more)
examples/: fetch_data.py  get_date_new.py  prediction_GUI.py  prediction_akshare_2024-2025.py  prediction_batch_example.py  prediction_cn_markets_day.py  prediction_example.py  prediction_market_factors.py  prediction_new.py  prediction_new_GUI.py  prediction_wo_vol_example.py  run_backtest_kairos.py  run_backtest_kairos_html.py  run_backtest_kronos.py
finetune/: config.py
finetune_csv/: build_training_dataset.py  config_loader.py  distilled_dataset.py  fetch_crypto_data.py  finetune_base_model.py  finetune_btc_and_crypto (copy 1).sh  finetune_btc_and_crypto.sh  finetune_crypto.sh  finetune_crypto_extra.sh  finetune_tokenizer.py  generate_distilled_tokens.py  train_large_model.py
kairos/: __init__.py  adapter.py  calendars.py  config.py  data.py  errors.py  windowing.py
model/: kronos.py  module.py
output/: 300418.SZ_detailed_predictions.csv  603288.SS_analysis_report.json  BTC-USD_backtest_results.html  BTC-USD_backtest_results_feathered.html  batch_predictions.csv  pred_000001_SZ_data.csv
roadmap/: phase-1-selection-config.md  phase-2-live-signals.md  phase-3-scheduling-delivery.md  phase-4-paper-trading.md  phase-5-auto-execution.md
scripts/: gpu_recover.py  smoke.py
strategy/: DESIGN_DOC_additional_strategies.md  DESIGN_DOC_awesome_quant_gaps.md  DESIGN_DOC_pipeline_automation.md  EXTENDED_STRATEGIES.md  EXTENDED_STRATEGIES_DONE.md  PIPELINE.md  README.md  allocation.py  kairos_backtest.py  kairos_crypto.py  kairos_econometric.py  kairos_execution.py  kairos_forex.py  kairos_gpu.py  kairos_horizon.py  kairos_meta.py  kairos_ml.py  kairos_orchestrator.py  kairos_path.py  kairos_pipeline.py  kairos_portfolio.py  kairos_predcache.py  kairos_sentiment.py  kairos_signals.py  kairos_stocks.py  kairos_strategies.py  kairos_universal.py  kairos_volatility.py
tests/: conftest.py
(+362 files in other folders)
