[project]
name = "kairos"
version = "0.1.0"
requires-python = ">=3.11"
description = "price_cache × Kronos integration layer for exchange-aware OHLCV forecasting"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "torch>=2.0",
    "huggingface-hub>=0.20",
    "safetensors>=0.4",
    "einops>=0.7",
    "tqdm>=4.60",
    "exchange-calendars>=4.0",
    "price-cache @ git+https://github.com/best-testing-monkey/price_cache.git",
    "pandas-stubs~=3.0.3",
    "plotly>=5.0",
    "matplotlib>=3.7",
    "ta>=0.10",
    "scipy>=1.10",
    "google-auth>=2.55.2",
    "google-auth-oauthlib>=1.4.0",
    "gspread>=6.2.1",
    "openpyxl>=3.1.5",
    "odfpy>=1.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "flake8>=7.0",
    "mypy>=1.0",
]
examples = [
    "akshare>=1.0",
]

[project.scripts]
forecast = "kairos.cli.forecast:main"
finetune = "kairos.cli.finetune:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["kairos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.flake8]
max-line-length = 120

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

